--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "application-name",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "requirejs": "^2.1.18"
+  }
 }
