--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
-    "requirejs": "^2.1.18"
+    "requirejs": "^2.1.18",
+    "q": "^1.0.1"
+
   }
 }
